@@ -40,6 +40,7 @@ struct _GimpTextUndo
   GimpText         *text;
   const GParamSpec *pspec;
   GValue           *value;
+  gboolean          modified;
 };
 
 struct _GimpTextUndoClass
